--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.roger.catloadinglibrary:catloadinglibrary:1.0.1'
     compile 'com.victor:lib:1.0.4'
+    compile 'com.github.GrenderG:Toasty:1.2.8'
+    compile 'nl.dionsegijn:konfetti:1.1.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
